2004-04-15  Marian Eichholz <eichholz@computer.org>

	* backend/sm3600.h backend/sm3600-scanmtek.c
	  backend/sm3600-color.c backend/sm3600-gray.c
	  backend/sm3600-homerun.c: Many fixes for MacOS-X problems pointed
	  out by Mattias Ellert, thanks: Waiting longer for DoJog() command
	  completion, new function for transmitting the line gain correction
	  data with correct endianess, Chassis-Gray-Level lowered.

2004-04-14  Karl Heinz Kremer <khk@khk.net>

	* backend/epson.conf: Added "usb" entry for libusb

2004-04-14  Rene Rebe <rene@rocklinux.org>

	* backend/avision.h, backend/avision.c: the current development state,
	  including cleanups, code refactoring, dynamic color and scan source
	  list creation, implemented ADF mirroring needed for some ASICs ,
	  some scan window scaliing fixes for some ASICs, added 16bit gray
	  and color support, fixed a tiny big-endian issue, fixed command
	  error reporting for some ASICs, improved inquiry logging and some
	  tiny fixes for film-scanners.

2004-04-14  Gerhard Jaeger <gerhard@gjaeger.de>

	* backend/plustek_pp.c backend/plustek-pp_sysdep.h
	  backend/plustek-pp_scan.h backend/plustek-pp_ptdrv.c
	  backend/plustek-pp_misc.c: Fixed Kernel 2.6 compilation problems.
	* doc/plustek/Makefile.kernel24 doc/plustek/Makefile.kernel26
	  doc/plustek/MakeModule.sh: added to make kernel-module
	  compilation easier.
	* doc/plustek/BUILD doc/plustek/VERSION0
	  doc/plustek/Plustek-PARPORT.txt doc/sane-plustek.man: update.
	* backend/u12.c backend/u12-hw.c backend/u12-if.c: minor fixes.
	* doc/u12/U12.changes doc/u12/U12.todo: update.
	* doc/descriptions/u12.desc: added RevScan Orange R48Ti.
	* sanei/sanei_thread.c: fixed some warning conditions.

2004-04-14  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* po/Makefile.in po/sane-backends.da.po: Added Danish translation
	  (from  Mogens Jaeger <mogensjaeger@get2net.dk>).

2004-04-12  Henning Meier-Geinitz <henning@meier-geinitz.de>
