@@ -289,7 +289,7 @@ else
           microtek2 mustek mustek_pp mustek_usb nec pie plustek \
           plustek_pp ricoh s9036 sceptre sharp \
           sp15c st400 tamarack test teco1 teco2 teco3 umax umax_pp umax1220u \
-          artec_eplus48u ma1509 ibm hp5400 u12"
+          artec_eplus48u ma1509 ibm hp5400 u12 snapscan"
 
   if test "${sane_cv_use_libjpeg}" != "yes"; then
     echo "*** disabling DC210 backend (failed to find JPEG library)"
@@ -342,12 +342,6 @@ else
     echo "*** disabling net backend (sys/socket.h not found)"
   else
     BACKENDS="${BACKENDS} net"
-  fi
-
-  if test "${ac_cv_header_sys_sem_h}" = "no" ; then
-    echo "*** disabling snapscan backend (sys/sem.h not found)"
-  else
-    BACKENDS="${BACKENDS} snapscan"
   fi
 
   AC_ARG_ENABLE(pnm-backend, 
